--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -23,7 +23,7 @@ twitter: ''
 email: eryu AT cs DOT cornell DOT edu
 # phone: 888 888 88 88
 address:
-  street: G23 Gates Hall
+  street: 302 Gates Hall
   city: Ithaca
   region: NY
   postcode: '14853'
